# matprak

./: .gitignore
01_meshes/cpp/: CMakeLists.txt  part0_circle.cpp  part0_cube.cpp  part0_cylinder.cpp  part1_torus.cpp  part2_thinker.cpp  sample02.cpp
02_vtk/cpp/: CMakeLists.txt  thinker.cpp
03_fenics/cpp/: Poisson.cpp  Poisson.h  Poisson.ufl
mini-proj/: CMakeLists.txt  Heat.h  Heat.ufl  common.h  step1_simple_torus.cpp  step2_static_heat.cpp  step3_moving.cpp  step4_strobe.cpp  step5_combined.cpp  step6_quad_static.cpp  step7_quad_dynamic.cpp  torus.geo  torus.msh  torus.xml
